# lerobot-vision

./: .coveragerc  .flake8  .gitmodules  README.md  create_structure.sh  environment.yml  fetch_models.sh  pyproject.toml  pytest.ini  requirements.txt  robot_keyboard.py  run.sh  serve_web.py  setup.sh
.github/workflows/: ci.yml
tests/: conftest.py  test_camera_interface.py  test_control_node.py  test_depth_engine.py  test_fusion.py  test_gui.py  test_kinematics.py  test_new_modules.py  test_nlp_node.py  test_planner_node.py  test_slam_node.py  test_visualization_node.py  test_web_interface.py  test_yolo3d_engine.py
webapp/templates/: index.html
ws/: __init__.py
ws/src/: OpenYOLO3D  __init__.py  isaac_ros_pose_estimation  lerobot  stereoanywhere
ws/src/lerobot_vision/: CMakeLists.txt  __init__.py  package.xml  setup.py
ws/src/lerobot_vision/config/: camera.yaml
ws/src/lerobot_vision/launch/: slam_system.launch.py  system_launch.py  view_detections.launch.py
ws/src/lerobot_vision/lerobot_vision/: __init__.py  auto_deps.py  calibrate_cli.py  camera_interface.py  control_node.py  depth_engine.py  fusion.py  gui.py  image_rectifier.py  kinematics.py  nlp_node.py  object_localizer.py  planner_node.py  pose_estimator.py  robot_controller.py  slam_node.py  stereo_calibrator.py  visualization_node.py  web_interface.py  yolo3d_engine.py
ws/src/lerobot_vision/rviz/: view_detections.rviz
ws/src/lerobot_vision/tests/: conftest.py  test_camera_interface.py  test_control_node.py  test_depth_engine.py  test_fusion.py  test_nlp_node.py  test_planner_node.py  test_visualization_node.py  test_yolo3d_engine.py
